--- a/src/components/inline-elements/color-button/color-button.demo.css
+++ b/src/components/inline-elements/color-button/color-button.demo.css
@@ -23,6 +23,7 @@
     height: 25px;
     width: 25px;
     font-size: 1.8em;
+    fill: var(--text);
 }
 
 .color-picker svg {
@@ -104,6 +105,11 @@
 .color-buttons svg {
     height: 30px;
     width: 30px;
+}
+
+
+.color-button svg {
+    fill: var(--text);
 }
 
 .color-button:hover svg {
